<resources>
    <string name="app_name">Nip_Team</string>
    <string name="activity_main_not_pressed">Not pressed</string>
    <string name="activity_main_button_text">Press me</string>
    <string name="activity_main_button_hide_view">Hide view</string>
    <string name="activity_main_button_check_from_const">Check from const</string>
    <string name="activity_main_it_is_so_sad">It is so sad =(</string>
    <string name="activity_main_error_pass">Error password</string>
    <string name="activity_students_btn_sort_students">Сортировка студентов</string>
    <string name="activity_students_btn_sort_students_random">Сортировка студентов рандомно</string>
    <string name="activity_project_btn_next_page">Передать на другую страницу</string>
    <string name="activity_name_check_editor">Введите текст</string>
    <string name="activity_name_check_status">Статус</string>
    <string name="activity_name_check_action">Проверка</string>
    <string name="activity_name_check_error">Error, we have digits in our name!</string>
    <string name="activity_name_check_success">Everithing looks fine!</string>
    <string name="activity_name_capture_photo">Сделать фото</string>
    <string name="activity_project_btn_open_picture">Страница для получения фото</string>
    <string name="activity_registration_btn_registration">Регестрация</string>
    <string name="activity_project_btn_open_registration">Начать регестрацию</string>


    <string name="activity_registretion_name_label">Имя</string>
    <string name="activity_registretion_email_label">Почта</string>
    <string name="activity_registretion_pass_label">Пароль</string>
    <string name="activity_registretion_confirm_pass_label">Повторите пароль</string>


    <string name="activity_project_btn_open_test_game">Открыть игру</string>
    <string name="activity_project_btn_open_students">Перейти к студентам</string>


    <string name="activity_permission_camera">Камера</string>
    <string name="activity_permission_call">Звонок</string>

</resources>