<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <EditText
        android:id="@+id/editTextEditor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/activity_name_check_editor" />
    <TextView
        android:id="@+id/textViewStatus"
        android:layout_gravity="center"
        android:text="@string/activity_name_check_status"
        android:layout_width="100dp"
        android:layout_height="30dp"/>

    <Button
        android:text="@string/activity_name_check_action"
        android:layout_gravity="center"
        android:id="@+id/buttonActivityAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>