<LinearLayout
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <TextView
            android:text="@string/activity_registretion_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/editTextName"
            android:layout_gravity="center"
            android:layout_width="300dp"
            android:layout_height="wrap_content"/>
    </GridLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
            <TextView
                android:text="@string/activity_registretion_email_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/editTextEmail"
                android:layout_gravity="center"
                android:layout_width="300dp"
                android:layout_height="wrap_content"/>

    </GridLayout>


    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
            <TextView
                android:text="@string/activity_registretion_pass_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/editTextPass"
                android:layout_gravity="center"
                android:layout_width="300dp"
                android:layout_height="wrap_content"/>
    </GridLayout>


    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
            <TextView
                android:text="@string/activity_registretion_confirm_pass_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/editTextConfirmPass"
                android:layout_gravity="center"
                android:layout_width="280dp"
                android:layout_height="wrap_content"/>

    </GridLayout>

    <Button
        android:text="@string/activity_registration_btn_registration"
        android:id="@+id/btnRegistration"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>
    <TextView
        android:id="@+id/textViewRegestrationStatus"
        android:layout_gravity="center"
        android:text="@string/activity_students_btn_sort_students"
        android:layout_width="300dp"
        android:layout_height="100dp"/>
</LinearLayout>