<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textview_activity_students_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_main_button_check_from_const"/>

    <TextView
        android:id="@+id/textview_activity_students_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_main_button_check_from_const"/>
    <Button
        android:id="@+id/button_activity_sort_students"
        android:text="@string/activity_students_btn_sort_students"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/button_activity_sort_random"
        android:text="@string/activity_students_btn_sort_students_random"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>