<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <TextView
        android:layout_width="181dp"
        android:layout_height="50dp"
        android:text="@string/activity_main_not_pressed"
        android:textAlignment="center"
        android:id="@+id/TextViewPress"
        android:layout_gravity="center"
        android:gravity="center"
        >
    </TextView>

    <EditText
        android:id="@+id/editTextFirst"
        android:layout_width="200dp"
        android:layout_gravity="center"
        android:layout_height="50dp"/>
    <EditText
        android:id="@+id/editTextSecond"
        android:layout_width="200dp"
        android:layout_gravity="center"
        android:layout_height="50dp"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:id="@+id/hideViewBtn"
        android:text="@string/activity_main_button_hide_view" />
    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:id="@+id/checkFromConst"
        android:text="@string/activity_main_button_check_from_const"/>



</LinearLayout>